<?xml version="1.0" encoding="utf-8"?>
<resources>
 
	<string name="canceled">Abgebrochen</string>
	<string name="more">Mehr</string>
	<string name="sub_only">Forum enthält keine Themen</string>
	<string name="app_name">IBC</string>
	<string name="search_for_topics">Suche nach Themen</string>
	<string name="search">Suche</string>
	<string name="searchresult">Suchergebnis</string>
	<string name="preferences">Einstellungen</string>
	<string name="username">Benutzername</string>
	<string name="path">Pfad</string>

	<string name="unread_topics">Ungelesen</string>
	<string name="participated_topics">Meine Themen</string>
	<string name="latest_topics">Neuste Themen</string>
	<string name="mailbox">Nachrichten</string>
	<string name="hostname">Hostname</string>
	<string name="password">Kennwort</string>
	<string name="subject">Betreff</string>
	<string name="text">Text</string>
	<string name="send">Senden</string>
	<string name="recipient">Empfänger</string>
	<string name="port">Port</string>
	<string name="version">Version</string>
	<string name="connect">Mit Server verbinden</string>
	<string-array name="api_list">
		<item>1</item>
		<item>2</item>

	</string-array>
	<string-array name="version_list">
		<item>1.0</item>
		<item>1.1</item>
	</string-array>
	<string name="writable">Schreibzugriff</string>
	<string name="version_summary">Server-Version</string>

	<string name="publish">Veröffentlichen</string>
	<string name="properties">Eigenschaften</string>
	<string name="loading">Warten auf Server</string>
	<string name="waitingfor_news">Neue Nachrichten werden geladen</string>
	<string name="waitingfor_forum">Foren werden geladen</string>
	<string name="waitingfor_topic">Thema wird geladen</string>
	<string name="waitingfor_search">Suche wird ausgeführt</string>
	<string name="waitingforcontent">Inhalt wird geladen</string>
	<string name="waitingforprojects">Projekte werden geladen</string>
	<string name="waitingfor_login">Anmeldung am Server</string>
	<string name="waitingfor_logout">Abmeldung</string>
	<string name="waitingfor_sending">Wird gesendet</string>
	<string name="waitingfordelete">Löschen</string>
	<string name="waitingfornew">Erzeuge</string>
	<string name="waitingforsave">Speichern</string>
	<string name="waitingfor_loadmore">Lade weitere Einträge</string>
	<string name="waitingfor_mailbox">Nachrichten werden geladen</string>
	<string name="waitingfor_subscription_forums">Abonnierte Foren werden geladen</string>
	<string name="waitingfor_subscription_topics">Abonnierte Themen werden geladen</string>
	<string name="checking_new">Prüfe auf neue Nachrichten</string>
	<string name="checking_inbox">Prüfe auf neue Nachrichten</string>
	<string name="checking_for_subscribed_topics">Prüfe abonnierte Themen</string>
	<string name="checking_for_subscribed_forums">Prüfe abonnierte Foren</string>
	<string name="name">Name</string>


	<string name="description">Inhalt</string>
	<string name="editor">Inhalt</string>
	<string name="error_timeout">Zeitablauf</string>
	<string name="error_io">Keine Verbindung</string>
	<string name="xmlrpc_error">Keine Verbindung zum Server</string>
	<string name="error_common_server">Unerwartete Antwort vom Server</string>
	<string name="error">Fehler</string>
	<string name="error_tapatalk">Tut uns leid, aber diese Aktion war nicht erfolgreich</string>
	<string name="reason">Grund</string>
	<string name="areyousure">Sicher?</string>
	<string name="choosefile">Datei auswählen</string>
	<string name="chooseimage">Bild auswählen</string>
	<string name="new_message">Neue Nachricht</string>
	<string name="server">Server</string>
	<string name="timeout">Zeitablauf</string>
	<string name="timeout_desc">Timeout der TCP/IP-Verbindung in Sekunden</string>
	<string name="databaseid">Datenbank-Id</string>
	<string name="databaseid_desc">Datenbank-Id aus der Server-Konfiguration</string>
	<string name="saved">Gespeichert</string>
	<string name="release">Freigeben</string>
	<string name="noserver">Es ist noch kein Server konfiguriert. Über die
		Menütaste können Sie einen neuen Server anlegen.</string>
	<string name="nousername">Es ist noch kein Benutzername konfiguriert</string>
	<string name="www">Zur Webseite</string>
	<string name="scroll_down">Zum Ende springen</string>
	<string name="scroll_down_desc">Beim Laden von Themen automatisch zum letzten
		Beitrag springen</string>
	<string name="use_ibc_theme">IBC-Theme benutzen</string>
	<string name="theme_changed">Thema wurde gespeichert und wird nach Neustart angewendet</string>
	<string name="auto_login">Automatisch anmelden</string>
	<string name="auto_login_desc">Beim Starten des Forums automatisch anmelden.
	</string>
	<string name="num_load">Anzahl Posts laden</string>
	<string name="num_load_desc">Anzahl der Themen/Beiträge, die initial geladen
		werden</string>
	<string name="auto_load_next">Automatisch nachladen</string>
	<string name="auto_load_next_desc">Beim Scrollen die nächsten Einträge automatisch
		laden</string>
	<string name="login">Anmelden</string>
	<string name="login_success">Anmeldung erfolgreich</string>
	<string name="login_failed">Benutzeranmeldung nicht erfolgreich</string>
	<string name="logout">Abmelden</string>
	<string-array name="num_load_list">
		<item>5</item>
		<item>10</item>
		<item>20</item>
		<item>50</item>
	</string-array>

	<string name="unread_topic">Ungelesenes Thema</string>
	<string name="unread_forum">Ungelesenes Forum</string>
	<string name="unread_messages">Ungelesene Nachrichten</string>
	<string name="forum">Forum</string>
	<string name="news">News</string>
	<string name="photos">Fotos</string>
	<string name="bikemarkt">Bikemarkt</string>
	<string name="shop">Shopping</string>
	<string name="gewichte">Gewichte</string>
	<string name="lmb">Fahrgemeinschaften</string>
	<string name="biketest">Biketest</string>
	<string name="video">Videos</string>
	<string name="blog">Blog</string>
	<string name="links">Links</string>
	<string name="load_images">Bilder anzeigen</string>
	<string name="load_images_desc">Automatisches Anzeigen von Bildern in Beiträgen.
		Dadurch wird die App langsamer und der Datenverbrauch steigt.</string>
	<string name="goto_first_post">Zum ersten Beitrag</string>
	<string name="goto_last_post">Zum letzten Beitrag</string>
	<string name="goto_top">Nach oben</string>
	<string name="goto_bottom">Nach unten</string>
	<string name="reply">Antworten</string>
	<string name="sent_ok">Nachricht wurde veschickt</string>
	<string name="sent_fail">Die Nachricht konnte nicht gesendet werden</string>
	<string name="new_topic">Neues Thema</string>
	<string name="parse_bbcode">BB-Code auswerten</string>
	<string name="parse_bbcode_desc">In Forumbeiträgen den BB-Code auflösen. Kann die
		Anzeige von Beiträgen stark verlangsamen.</string>
	<string name="show_hints">Tipps anzeigen</string>
	<string name="show_hints_desc">Ausführliche Meldungen, Hilfetexte und Tipps anzeigen</string>
	<string name="hint_press_long">Lange drücken um weitere Funktionen zu erhalten
	</string>
	<string name="subscription_service">Abo-Dienst</string>
	<string name="subscription_service_started">Abo-Dienst gestartet</string>
	<string name="subscription_saved">Abonnement wurde aktualisiert</string>
	<string name="subscription_service_stopped">Abo-Dienst gestoppt</string>
	<string name="subscription_service_desc">Informiert bei neuen Nachrichten und ungelesenen
		Beiträgen in abonnierten Foren und Themen</string>
	<string name="subscription_forums">Abonnierte Foren</string>
	<string name="subscription_topics">Abonnierte Themen</string>

	<string name="mark_all_forum_read">Alle Foren als gelesen markieren</string>
	<string name="mark_forum_read">Forum als gelesen markieren</string>
	<string name="mark_topic_read">Thema als gelesen markieren</string>
	<string name="mark_unread">Als ungelesen markieren</string>
	<string name="subscribe_forum">Forum abonnieren</string>
	<string name="subscribe_topic">Thema abonnieren</string>
	<string name="mode">Modus</string>
	<string name="vibration">Vibration</string>
	<string name="vibration_desc">Vibrationsalarm bei neuen Nachrichten</string>
	<string name="ringtone">Ton</string>


	<string name="interval">Intervall</string>
	<string-array name="interval_list">
		<item>1</item>
		<item>5</item>
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>1440</item>
		<item>2880</item>
	</string-array>
	<string-array name="interval_list_label">
		<item>1 Minute</item>
		<item>5 Minuten</item>
		<item>15 Minuten</item>
		<item>30 Minuten</item>
		<item>1 Stunde</item>
		<item>3 Stunden</item>
		<item>6 Stunden</item>
		<item>1 Tag</item>
		<item>2 Tage</item>
	</string-array>

	<string-array name="subscription_modes">
		<item>Kein Abo</item>
		<item>Ohne E-Mail</item>
		<item>Sofortige E-Mail</item>
		<item>Tägliche E-Mail</item>
		<item>Wöchentliche E-Mail</item>
	</string-array>

	<string-array name="topic_modes">
		<item>Standard-Themen</item>
		<item>Wichtige Themen</item>
		<item>Ankündigungen</item>
	</string-array>

</resources>
