<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="@string/preferences">

	<CheckBoxPreference android:defaultValue="true"
		android:key="ibc_theme" android:title="@string/use_ibc_theme" />

	<CheckBoxPreference android:defaultValue="true"
		android:key="show_hints" android:title="@string/show_hints" android:summary="@string/show_hints_desc" />

	<!--
		<EditTextPreference android:key="timeout"
		android:title="@string/timeout" android:summary="@string/timeout_desc"
		android:defaultValue="30"></EditTextPreference>
	-->
	<!--
		<EditTextPreference android:key="server"
		android:title="@string/server"></EditTextPreference>
	-->


	<PreferenceCategory android:title="@string/username">

		<EditTextPreference android:key="username"
			android:title="@string/username"></EditTextPreference>
		<EditTextPreference android:key="password"
			android:password="true" android:title="@string/password"></EditTextPreference>

		<CheckBoxPreference android:defaultValue="false"
			android:summary="@string/auto_login_desc" android:key="auto_login"
			android:title="@string/auto_login" android:dependency="username" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/forum">

		<ListPreference android:defaultValue="10"
			android:summary="@string/num_load_desc" android:entries="@array/num_load_list"
			android:entryValues="@array/num_load_list" android:key="num_load"
			android:title="@string/num_load" />

		<CheckBoxPreference android:defaultValue="true"
			android:summary="@string/auto_load_next_desc" android:key="auto_load_next"
			android:title="@string/auto_load_next" android:enabled="false" />

		<CheckBoxPreference android:defaultValue="false"
			android:summary="@string/scroll_down_desc" android:key="scroll_down"
			android:title="@string/scroll_down" />

		<CheckBoxPreference android:defaultValue="false"
			android:summary="@string/parse_bbcode_desc" android:key="parse_bbcode"
			android:title="@string/parse_bbcode" />

		<CheckBoxPreference android:defaultValue="false"
			android:key="load_images" android:summary="@string/load_images_desc"
			android:title="@string/load_images" />

	</PreferenceCategory>

	<PreferenceCategory android:title="@string/subscription_service">

		<CheckBoxPreference android:defaultValue="true"
			android:key="autostart_subscription_service" android:summary="@string/subscription_service_desc"
			android:title="@string/subscription_service" />
		<ListPreference android:defaultValue="60"
			android:entries="@array/interval_list_label" android:entryValues="@array/interval_list"
			android:key="subscription_service_interval" android:title="@string/interval"
			android:dependency="autostart_subscription_service" />
		<RingtonePreference android:key="ringtone"
			android:showSilent="true" android:showDefault="true"
			android:ringtoneType="notification" android:title="@string/ringtone" />
		<CheckBoxPreference android:defaultValue="false"
			android:key="use_vibration" android:summary="@string/vibration_desc"
			android:title="@string/vibration" android:dependency="autostart_subscription_service" />

	</PreferenceCategory>
</PreferenceScreen>
