<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_mailbox" android:title="@string/mailbox"
		android:icon="@android:drawable/ic_menu_send"></item>
	<item android:id="@+id/menu_create_topic" android:title="@string/new_topic"
		android:icon="@android:drawable/ic_menu_edit"></item>
	<item android:id="@+id/menu_participated_topics" android:title="@string/participated_topics"
		android:icon="@android:drawable/ic_menu_view"></item>
	<item android:id="@+id/menu_latest_topics" android:title="@string/latest_topics"
		android:icon="@android:drawable/ic_menu_today"></item>
	<item android:id="@+id/menu_unread_topics" android:title="@string/unread_topics"
		android:icon="@android:drawable/ic_menu_info_details"></item>
	<item android:id="@+id/menu_logout" android:title="@string/logout"
		android:icon="@android:drawable/ic_lock_lock"></item>
</menu>
 