<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:paddingLeft="4dp" android:paddingRight="4dp" style="@style/site">

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		style="?textbox">


		<TextView android:layout_width="wrap_content" android:text="@string/subject"
			android:layout_height="wrap_content" style="@style/normalText"></TextView>
		<EditText android:id="@+id/subject" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView  android:id="@+id/recipient_label" android:layout_width="wrap_content" android:text="@string/recipient"
			android:layout_height="wrap_content" style="@style/normalText"></TextView>
		<EditText android:id="@+id/recipient" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />

		<TextView android:text="@string/text" android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="?titleText"></TextView>
		<EditText android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:id="@+id/content"></EditText>

		<Button android:text="@string/send" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_margin="10sp"
			android:padding="5sp" android:id="@+id/send" style="?normalText"></Button>

	</LinearLayout>

</ScrollView>