<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<ImageView android:src="@drawable/ibc_logo"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
		</ImageView>
		<TextView android:layout_width="fill_parent" android:id="@+id/hello"
			android:layout_height="wrap_content" />

		<Button android:id="@+id/forum" android:text="@string/forum"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></Button>

		<Button android:id="@+id/news" android:text="@string/news"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/button"></Button>

		<Button android:id="@+id/photo" android:text="@string/photos"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/button"></Button>

	</LinearLayout>

</ScrollView>